--- a/Work.WebProj/Content/css/index.css
+++ b/Work.WebProj/Content/css/index.css
@@ -36,7 +36,7 @@ footer { color: #3E8582; }
 .slides h3,
 .slides h4,
 .slides h5 { line-height: 110%; margin: 0; }
-.slides .float-l { width: 420px; text-align: left; }
+.slides .float-l { width: 530px; text-align: left; margin: 0 0 0 20px;}
 .slides h3 { color: #E8E8E8; font-size: 6em; margin-left: -10px; }
 .slides h4 { color: #F3B552; font-size: 2.625em; }
 .slides h5 { color: #F3B552; font-size: 1.625em; }
@@ -280,8 +280,9 @@ iframe {
     .slides h3 {margin-left: -5px; font-size: 3.25em;}
     .slides h4 {font-size: 2em;}
     .slides h5 {font-size: 1.25em;}
-    .flex-direction-nav .flex-prev,
-    .flex-direction-nav .flex-next {opacity: 0.5;}
+    .flex-direction-nav .flex-prev, .flex-direction-nav .flex-next {opacity: 0.5;}
+    .flex-direction-nav .flex-prev {left: 10px;}
+    .flex-direction-nav .flex-next {right: 10px;}
     .flex-control-nav {
         left: 8.75em;
         bottom: 20px;
