--- a/Work.WebProj/Views/Shared/Layout.cshtml
+++ b/Work.WebProj/Views/Shared/Layout.cshtml
@@ -47,7 +47,7 @@
             <div class="summary">
                 <span>二手中古堆高機．全新堆高機</span>
                 <span>內壢交流道附近，歡迎來廠賞車</span>
-                <span>歡迎來廠賞車 週六、週日賞車請電洽0932103688謝先生</span>
+                <span>週六、週日賞車請電洽0932103688謝先生</span>
             </div>
 
             <div id="banner" class="flexslider">
